<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <View
        android:layout_width="80dp"
        android:layout_height="5dp"
        android:background="@drawable/line_gray_round"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="24dp"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@id/filter_title"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/location_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_title"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/first_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="Filter 1"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/second_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="Filter 2"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/third_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="Filter 3"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="24dp"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@id/location_group"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/filter_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="1"
        android:layout_marginTop="8dp"
        android:layout_below="@id/price_title"/>

    <TextView
        android:id="@+id/min_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_price"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filter_price"/>

    <TextView
        android:id="@+id/max_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_price"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/filter_price"/>

    <TextView
        android:id="@+id/min_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_price"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="4dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/min_title"/>

    <TextView
        android:id="@+id/max_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_price"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="4dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/max_title"/>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filter"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:layout_below="@id/max_price"/>

</RelativeLayout>