<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/product_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    android:backgroundTint="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_round_favorite"
                android:background="@drawable/bg_button_gray_light"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/product_title" />

            <RelativeLayout
                android:id="@+id/discount"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_product_price_discount_pct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorRed"
                    android:textSize="13sp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textStyle="bold"
                    android:background="@drawable/bg_tag_red_light"
                    tools:text="@string/product_discount_pct" />

                <TextView
                    android:id="@+id/tv_product_price_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="13sp"
                    android:layout_marginLeft="8dp"
                    android:layout_alignTop="@id/tv_product_price_discount_pct"
                    android:layout_alignBottom="@id/tv_product_price_discount_pct"
                    android:layout_toEndOf="@id/tv_product_price_discount_pct"
                    tools:text="@string/product_price" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorOrange"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/product_price" />

            <RelativeLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_power_merchant"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@id/tv_merchant_location"
                    android:src="@drawable/power_merchant_logo"/>

                <TextView
                    android:id="@+id/tv_merchant_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="13sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toEndOf="@id/iv_power_merchant"
                    tools:text="Jakarta Barat" />

            </RelativeLayout>

        </LinearLayout>
        
    </LinearLayout>
    
</androidx.cardview.widget.CardView>